# RIKPythonAssignment

./: .gitignore  GeneratingRandomData.ipynb  GeneratingRandomData2.ipynb  GeneratingRandomData3.ipynb  README.md  app.py  data_generation.py  databases.py  forms.py  fuusilised_isikud_assotsiatsiooni_tabel_test.json  fuusilised_isikud_test.json  init_db_script.py  juriidilised_isikud_assotsiatsiooni_tabel_test.json  juriidilised_isikud_test.json  models.py  pyproject.toml  routes.py  test.db  test_andmestik.json  utils.py
static/styles/: styles.css
templates/: avaleht.html  base.html  index.html  osauhingu_andmed.html  osauhingu_asutamine.html
tests/: unit_test.py
